--- a/src/pages/public/Login.module.css
+++ b/src/pages/public/Login.module.css
@@ -71,6 +71,7 @@
 
 .inputGroup {
   margin-bottom: 1.25rem;
+  text-align: center;
   /* Animation for each input group */
   animation: slideInUp 0.6s ease-out forwards;
   opacity: 0;
